--- a/pages/gambling.html
+++ b/pages/gambling.html
@@ -19,7 +19,7 @@
       <p>There are 16 players, and each one pays $300 to join, making a total pot of $4,800. The money is divided like this:</p>
       <ul>
         <li>$1,920 is for matches. Each player who wins a match within their foursome earns $40.</li>
-        <li>$1,280 is for Net Skins, Gross Skins, and Closest to the Pin (CTP) prizes.</li>
+        <li>$1,280 is for Net Skins, Gross Skins, and Closest to the Pin (CTP) prizes. Seperate pots for Blue Flight, White Flight, and Interflight Rounds.</li>
         <li>$400 goes to the team that wins between Team Ricky and Team Sherman.</li>
         <li>$400 goes to the team that wins between Team Mike and Team Ruben.</li>
         <li>$800 goes to the flight (Blue or White) that wins the InterFlight competition.</li>
