--- a/pages/housing.html
+++ b/pages/housing.html
@@ -41,8 +41,8 @@
           <h3>Ruben Hernandez House</h3>
           <ul>
             <li>Hunter Carmichael</li>
-            <li>Chris Martin</li>
-            <li>Dan Darelson</li>
+            <li>Eric Newell</li>
+            <li>Dan Darlson</li>
           </ul>
         </div>
 
@@ -50,7 +50,7 @@
           <h3>Mike Barancyk House</h3>
           <ul>
             <li>Van Huffine</li>
-            <li>Eric Newell</li>
+            <li>Chris Martin</li>
             <li>Alec Barancyk</li>
           </ul>
         </div>
