--- a/pages/blue-net-alt-best-ball.html
+++ b/pages/blue-net-alt-best-ball.html
@@ -29,7 +29,7 @@
 <table class="table">
 <tr><th colspan="2">Team Mike</th><th colspan="2">Team Ruben</th></tr>
 <tr><td>Mike Barancyk</td><td>Chris Martin</td><td>Hunter Carmichael</td><td>Kevin Sullivan</td></tr>
-<tr><td>Dan Darelson</td><td>Alec Barancyk</td><td>Ruben Hernandez</td><td>Eric Newell</td></tr>
+<tr><td>Dan Darlson</td><td>Alec Barancyk</td><td>Ruben Hernandez</td><td>Eric Newell</td></tr>
 </table>
 </div>
 </main>
