--- a/pages/blue-singles.html
+++ b/pages/blue-singles.html
@@ -28,7 +28,7 @@
 <h2>Foursomes</h2>
 <table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Mike Barancyk  vs  Ruben Hernandez</td><td>Dan Darelson  vs  Hunter Carmichael</td></tr>
+<tr><td>Mike Barancyk  vs  Ruben Hernandez</td><td>Dan Darlson  vs  Hunter Carmichael</td></tr>
 <tr><td>Chris Martin  vs  Kevin Sullivan</td><td>Alec Barancyk  vs  Eric Newell</td></tr>
 </table>
 </div>
