--- a/pages/interflight-singles.html
+++ b/pages/interflight-singles.html
@@ -28,7 +28,7 @@
 <h2>Foursomes</h2>
 <table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Dave Franklin  vs  Kevin Sullivan</td><td>Bret Bologna  vs  Dan Darelson</td></tr>
+<tr><td>Dave Franklin  vs  Kevin Sullivan</td><td>Bret Bologna  vs  Dan Darlson</td></tr>
 <tr><td>Van Huffine  vs  Alec Barancyk</td><td>Sam Carraher  vs  Chris Martin</td></tr>
 <tr><td>Steve Lieberman  vs  Eric Newell</td><td>Ron Carraher  vs  Hunter Carmichael</td></tr>
 <tr><td>Ricky Carraher  vs  Ruben Hernandez</td><td>Dan Sherman  vs  Mike Barancyk</td></tr>
