--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
       <p style="margin:6px 0 12px;color:#475569">Wagers, rules, payouts</p>
       <a class="btn" href="/winter_classic/pages/gambling.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
     </div>
+
+    <div class="card" style="text-align:center; border:1px solid #cbd5e1; border-radius:12px; background:#fff; padding:16px; margin-bottom:16px;">
+      <img src="/winter_classic/assets/SVG/receipt.svg" alt="Receipts" width="80">
+      <h2 style="margin:8px 0 0">Receipts</h2>
+      <p style="margin:6px 0 12px; color:#475569">Swag payments and fees</p>
+      <a class="btn" href="/winter_classic/pages/receipts.html"
+         style="display:inline-block; margin-top:12px; background:#2563eb; color:#fff; padding:8px 16px; border-radius:10px; text-decoration:none; font-weight:600;">
+         Open
+      </a>
+    </div>
+
   </main>
 </body>
 </html>
