Update receipts.html - Header Row
Updated to add header row

--- a/pages/receipts.html
+++ b/pages/receipts.html
@@ -41,6 +41,11 @@
 </head>
 <body>
 
+<header class="header" style="display:flex;align-items:center;gap:12px;padding:12px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+    <a href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:20px;">←</a>
+    <h1 style="margin:0;font-size:20px;">Receipts</h1>
+</header>
+
 <h2>Receipts</h2>
 
 <table>
