--- a/pages/receipts.html
+++ b/pages/receipts.html
@@ -74,7 +74,7 @@ const data = [
     { name: "Mike Barancyk", swag: "", gambling: "", golf: "" },
     { name: "Dan Darelson", swag: "X", gambling: "X", golf: "" },
     { name: "Alec Barancyk", swag: "", gambling: "", golf: "" },
-    { name: "Chris Martin", swag: "", gambling: "", golf: "" },
+    { name: "Chris Martin", swag: "X", gambling: "X", golf: "" },
     { name: "Ruben Hernandez", swag: "X", gambling: "X", golf: "" },
     { name: "Hunter Carmichael", swag: "", gambling: "", golf: "" },
     { name: "Eric Newell", swag: "X", gambling: "", golf: "" },
