Update teesheet.html - spelling of Ricky

--- a/pages/teesheet.html
+++ b/pages/teesheet.html
@@ -183,7 +183,7 @@
                 </tr>
                 <tr>
                     <td class="time">7:18 AM</td>
-                    <td>Rickey Carraher<br>Bret Bologna</td>
+                    <td>Ricky Carraher<br>Bret Bologna</td>
                     <td>Dan Sherman<br>Van Huffine</td>
                 </tr>
                 <tr>
@@ -229,7 +229,7 @@
                 </tr>
                 <tr>
                     <td class="time">1:00 PM</td>
-                    <td>Rickey Carraher<br>David Franklin</td>
+                    <td>Ricky Carraher<br>David Franklin</td>
                     <td>Dan Darlson<br>Alec Barancyk</td>
                 </tr>
             </table>
@@ -255,7 +255,7 @@
                 </tr>
                 <tr>
                     <td class="time">7:36 AM</td>
-                    <td>Rickey Carraher<br>Steve Lieberman</td>
+                    <td>Ricky Carraher<br>Steve Lieberman</td>
                     <td>Sam Carraher<br>Van Huffine</td>
                 </tr>
                 <tr>
@@ -281,7 +281,7 @@
                 </tr>
                 <tr>
                     <td class="time">12:42 PM</td>
-                    <td>Bret Bologna<br>Rickey Carraher</td>
+                    <td>Bret Bologna<br>Ricky Carraher</td>
                     <td>Chris Martin<br>Ruben Hernandez</td>
                 </tr>
                 <tr>
@@ -307,7 +307,7 @@
                 </tr>
                 <tr>
                     <td class="time">7:18 AM</td>
-                    <td>Rickey Carraher<br>Bret Bologna</td>
+                    <td>Ricky Carraher<br>Bret Bologna</td>
                     <td>Dan Sherman<br>Van Huffine</td>
                 </tr>
                 <tr>
@@ -353,7 +353,7 @@
                 </tr>
                 <tr>
                     <td class="time">1:00 PM</td>
-                    <td>Rickey Carraher<br>Dan Sherman</td>
+                    <td>Ricky Carraher<br>Dan Sherman</td>
                     <td>R. Hernandez<br>Mike Barancyk</td>
                 </tr>
             </table>
