--- a/pages/receipts.html
+++ b/pages/receipts.html
@@ -71,9 +71,9 @@ const data = [
     { name: "Sam Carraher", swag: "X", gambling: "", golf: "" },
     { name: "Dave Franklin", swag: "", gambling: "", golf: "" },
     { name: "Van Huffine", swag: "X", gambling: "X", golf: "" },
-    { name: "Mike Barancyk", swag: "", gambling: "", golf: "" },
+    { name: "Mike Barancyk", swag: "X", gambling: "X", golf: "" },
     { name: "Dan Darelson", swag: "X", gambling: "X", golf: "" },
-    { name: "Alec Barancyk", swag: "", gambling: "", golf: "" },
+    { name: "Alec Barancyk", swag: "X", gambling: "", golf: "" },
     { name: "Chris Martin", swag: "X", gambling: "X", golf: "" },
     { name: "Ruben Hernandez", swag: "X", gambling: "X", golf: "" },
     { name: "Hunter Carmichael", swag: "", gambling: "", golf: "" },
