--- a/pages/receipts.html
+++ b/pages/receipts.html
@@ -69,7 +69,7 @@ const data = [
     { name: "Steve Lieberman", swag: "X", gambling: "X", golf: "" },
     { name: "Dan Sherman", swag: "X", gambling: "", golf: "" },
     { name: "Sam Carraher", swag: "X", gambling: "", golf: "" },
-    { name: "Dave Franklin", swag: "", gambling: "", golf: "" },
+    { name: "Dave Franklin", swag: "X", gambling: "X", golf: "" },
     { name: "Van Huffine", swag: "X", gambling: "X", golf: "" },
     { name: "Mike Barancyk", swag: "X", gambling: "X", golf: "" },
     { name: "Dan Darelson", swag: "X", gambling: "X", golf: "" },
