--- a/pages/summary.html
+++ b/pages/summary.html
@@ -1,83 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Winter Classic – Player Summary</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
+  <title>Golf Summary</title>
+  <link rel="manifest" href="/winter_classic/manifest.webmanifest">
+  <link rel="apple-touch-icon" href="/winter_classic/assets/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#2a78c8">
+  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
 
-<!-- Bootstrap -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <!-- Bootstrap (for modal and table styling) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
-<!-- Table sorting library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js"></script>
+  <!-- Tablesort -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js"></script>
 
-<style>
-    body { background-color: #f2f6fc; }
-
-    /* Header bar (matches Winter Classic style) */
-    .wc-header {
-        background-color: #003366;
-        padding: 10px 20px;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => navigator.serviceWorker.register("/winter_classic/service-worker.js"));
     }
-    .wc-header img {
-        height: 50px;
-    }
-    .back-button {
-        color: white;
-        font-weight: bold;
-        text-decoration: none;
-        font-size: 1.1rem;
-    }
-    .back-button:hover {
-        color: #cce0ff;
-    }
+  </script>
 
-    h1 {
-        margin: 25px 0;
-        text-align: center;
-        font-weight: 600;
-        color: #003366;
+  <style>
+    /* small tweaks on top of your existing styles.css */
+    .summary-table-container {
+      margin-top: 20px;
     }
-
-    table { background: white; }
-    .modal-content { border-radius: 10px; }
-
     .player-link {
-        cursor: pointer;
-        color: #0d6efd;
-        font-weight: 600;
+      cursor: pointer;
+      color: #2a78c8;
+      font-weight: 600;
     }
-    .player-link:hover { text-decoration: underline; }
-</style>
+    .player-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
 
-<!-- Winter Classic Header -->
-<div class="wc-header">
-    <a href="../golf.html" class="back-button">&larr; Back</a>
-    <img src="../assets/logo.png" alt="Winter Classic Logo">
-</div>
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+  <a class="back" href="/winter_classic/pages/golf.html" style="color:white;text-decoration:none;font-size:18px;">‹ Back</a>
+  <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" style="height:40px">
+  <h1 style="margin:0;font-size:18px;line-height:1;">Golf Summary</h1>
+</header>
 
-<h1>Player Summary</h1>
+<main class="container">
+  <div class="section">
+    <h2>Player Winnings Summary</h2>
+    <p>Tap a player name to see their match results.</p>
 
-<div class="container">
-<div class="table-responsive">
-<table id="summaryTable" class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Player</th>
-            <th>Total Matches</th>
-            <th>Total Winnings</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
-</div>
-</div>
+    <div class="summary-table-container">
+      <div class="table-responsive">
+        <table id="summaryTable" class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Player</th>
+              <th>Total Matches</th>
+              <th data-sort-method="currency">Total Winnings</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</main>
+
+<div class="footer">Built for offline use • Winter Classic</div>
 
 <!-- Modal -->
 <div class="modal fade" id="playerModal" tabindex="-1">
@@ -103,104 +94,117 @@
   </div>
 </div>
 
-<!-- JS -->
+<!-- JS libs -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
 <script>
+// Extend Tablesort to handle currency as numeric
+Tablesort.extend('currency', function(item) {
+  // detect: cell that starts with $, £, €, or contains digits with $ somewhere
+  return /^[\s]*[$£€]/.test(item) || /^[\s]*[$£€]?\s*\d/.test(item);
+}, function(a, b) {
+  var numA = parseFloat(a.replace(/[^0-9.\-]/g, '')) || 0;
+  var numB = parseFloat(b.replace(/[^0-9.\-]/g, '')) || 0;
+  return numA - numB;
+});
+
 let playerData = {};
 
 function loadCSV() {
-    Papa.parse("../assets/player_match_results.csv", {
-        download: true,
-        header: true,
-        complete: function(results) {
-            processData(results.data);
-        }
-    });
+  Papa.parse("/winter_classic/assets/player_match_results.csv", {
+    download: true,
+    header: true,
+    complete: function(results) {
+      processData(results.data);
+    }
+  });
 }
 
 function processData(data) {
-    playerData = {};
+  playerData = {};
 
-    data.forEach(row => {
-        const player = row.player;
-        if (!player) return;
+  data.forEach(row => {
+    const player = row.player;
+    if (!player) return;
 
-        if (!playerData[player]) {
-            playerData[player] = {
-                matches: 0,
-                totalMoney: 0,
-                details: []
-            };
-        }
+    if (!playerData[player]) {
+      playerData[player] = {
+        matches: 0,
+        totalMoney: 0,
+        details: []
+      };
+    }
 
-        playerData[player].matches++;
+    playerData[player].matches++;
 
-        // Determine win/loss flags (case-insensitive)
-        let winFlag  = (row.Winner || "").trim().toUpperCase() === "X";
-        let lossFlag = (row.Loser  || "").trim().toUpperCase() === "X";
-        
-        let result = "N/A";
-        if (winFlag) result = "Win";
-        else if (lossFlag) result = "Loss";
-        
-        // Only add winnings for WINNERS
-        let money = 0;
-        if (winFlag && row.Winnings && row.Winnings.trim().startsWith("$")) {
-            money = parseFloat(row.Winnings.replace("$", "").trim());
-            playerData[player].totalMoney += money;
-        }
+    // Normalize Winner/Loser flags (case-insensitive, trimmed)
+    const winFlag  = ((row.Winner || "").trim().toUpperCase() === "X");
+    const lossFlag = ((row.Loser  || "").trim().toUpperCase() === "X");
 
+    let result = "N/A";
+    if (winFlag)      result = "Win";
+    else if (lossFlag) result = "Loss";
 
-        playerData[player].details.push({
-            page: row.page,
-            result: result,
-            winnings: row.Winnings
-        });
+    // Only add winnings when this player is a winner
+    let money = 0;
+    if (winFlag && row.Winnings && row.Winnings.toString().trim().length > 0) {
+      const stripped = row.Winnings.toString().replace(/[^0-9.\-]/g, "");
+      if (stripped) {
+        money = parseFloat(stripped) || 0;
+        playerData[player].totalMoney += money;
+      }
+    }
+
+    playerData[player].details.push({
+      page: row.page,
+      result: result,
+      winnings: row.Winnings || ""
     });
+  });
 
-    buildTable();
+  buildTable();
 }
 
 function buildTable() {
-    const tbody = document.querySelector("#summaryTable tbody");
-    tbody.innerHTML = "";
+  const tbody = document.querySelector("#summaryTable tbody");
+  tbody.innerHTML = "";
 
-    Object.keys(playerData).sort().forEach(player => {
-        const p = playerData[player];
+  Object.keys(playerData).sort().forEach(player => {
+    const p = playerData[player];
+    const row = document.createElement("tr");
 
-        const row = document.createElement("tr");
-        row.innerHTML = `
-            <td><span class="player-link" onclick="openModal('${player}')">${player}</span></td>
-            <td>${p.matches}</td>
-            <td>$${p.totalMoney}</td>
-        `;
-        tbody.appendChild(row);
-    });
+    // data-sort attribute for numeric sorting if needed
+    row.innerHTML = `
+      <td><span class="player-link" onclick="openModal('${player.replace(/'/g, "\\'")}')">${player}</span></td>
+      <td data-sort="${p.matches}">${p.matches}</td>
+      <td data-sort="${p.totalMoney}">$${p.totalMoney}</td>
+    `;
+    tbody.appendChild(row);
+  });
 
-    new Tablesort(document.getElementById("summaryTable"));
+  new Tablesort(document.getElementById("summaryTable"));
 }
 
 function openModal(player) {
-    const modalLabel = document.getElementById("playerModalLabel");
-    const modalBody = document.getElementById("modalTableBody");
+  const modalLabel = document.getElementById("playerModalLabel");
+  const modalBody = document.getElementById("modalTableBody");
 
-    modalLabel.textContent = player;
-    modalBody.innerHTML = "";
+  modalLabel.textContent = player;
+  modalBody.innerHTML = "";
 
-    playerData[player].details.forEach(d => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-            <td>${d.page}</td>
-            <td>${d.result}</td>
-            <td>${d.winnings}</td>
-        `;
-        modalBody.appendChild(row);
-    });
+  playerData[player].details.forEach(d => {
+    const row = document.createElement("tr");
+    row.innerHTML = `
+      <td>${d.page}</td>
+      <td>${d.result}</td>
+      <td>${d.winnings}</td>
+    `;
+    modalBody.appendChild(row);
+  });
 
-    const modal = new bootstrap.Modal(document.getElementById('playerModal'));
-    modal.show();
+  const modal = new bootstrap.Modal(document.getElementById('playerModal'));
+  modal.show();
 }
 
 loadCSV();
