--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="card" style="text-align:center;border:1px solid #e2e8f0;border-radius:12px;background:#fff;padding:16px;margin-bottom:16px;">
-      <img src="/winter_classic/assets/SVG/golf.svg" alt="Tee Sheets" width="80">
+      <img src="/winter_classic/assets/SVG/cart.svg" alt="Tee Sheets" width="80">
       <h2 style="margin:8px 0 0">Tee Sheets</h2>
       <p style="margin:6px 0 12px;color:#475569">Tee Times and Cart Partners</p>
       <a class="btn" href="/winter_classic/pages/teesheet.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
@@ -50,6 +50,13 @@
          style="display:inline-block; margin-top:12px; background:#2563eb; color:#fff; padding:8px 16px; border-radius:10px; text-decoration:none; font-weight:600;">
          Open
       </a>
+    </div>
+
+    <div class="card" style="text-align:center;border:1px solid #e2e8f0;border-radius:12px;background:#fff;padding:16px;margin-bottom:16px;">
+      <img src="/winter_classic/assets/SVG/summary.svg" alt="Summary" width="80">
+      <h2 style="margin:8px 0 0">Summary</h2>
+      <p style="margin:6px 0 12px;color:#475569">Summary of Matches by Player</p>
+      <a class="btn" href="/winter_classic/pages/summary.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
     </div>
 
   </main>
