--- a/pages/receipts.html
+++ b/pages/receipts.html
@@ -63,12 +63,12 @@
 
 <script>
 const data = [
-    { name: "Ricky Carraher", swag: "X", gambling: "", golf: "" },
-    { name: "Ron Carraher", swag: "X", gambling: "", golf: "" },
-    { name: "Bret Bologna", swag: "X", gambling: "", golf: "" },
+    { name: "Ricky Carraher", swag: "X", gambling: "X", golf: "" },
+    { name: "Ron Carraher", swag: "X", gambling: "X", golf: "" },
+    { name: "Bret Bologna", swag: "X", gambling: "X", golf: "" },
     { name: "Steve Lieberman", swag: "X", gambling: "X", golf: "" },
-    { name: "Dan Sherman", swag: "X", gambling: "", golf: "" },
-    { name: "Sam Carraher", swag: "X", gambling: "", golf: "" },
+    { name: "Dan Sherman", swag: "X", gambling: "X", golf: "" },
+    { name: "Sam Carraher", swag: "X", gambling: "X", golf: "" },
     { name: "Dave Franklin", swag: "X", gambling: "X", golf: "" },
     { name: "Van Huffine", swag: "X", gambling: "X", golf: "" },
     { name: "Mike Barancyk", swag: "X", gambling: "X", golf: "" },
@@ -76,7 +76,7 @@ const data = [
     { name: "Alec Barancyk", swag: "X", gambling: "", golf: "" },
     { name: "Chris Martin", swag: "X", gambling: "X", golf: "" },
     { name: "Ruben Hernandez", swag: "X", gambling: "X", golf: "" },
-    { name: "Hunter Carmichael", swag: "", gambling: "", golf: "" },
+    { name: "Hunter Carmichael", swag: "X", gambling: "X", golf: "" },
     { name: "Eric Newell", swag: "X", gambling: "", golf: "" },
     { name: "Kevin Sullivan", swag: "X", gambling: "X", golf: "" },
 ];
